fix overlay background so that it properly covers screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ ul#story {
 #complete-story {
   width: 100%;
   min-height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: black;
